--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,3 +1,6 @@
-<header class="header">
+<div class="header">
     <h1>Нотный поисковик</h1>
-</header>
+    <div class="page-tabs">
+        <app-page-tabs></app-page-tabs>
+    </div>
+</div>
