--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -1,5 +1,8 @@
+@import '/src/variables.scss';
+
 .header {
     width: 100%;
-    height: 50px;
+    min-height: 50px;
     text-align: center;
+    padding-bottom: $common-padding;
 }
