--- a/src/theming/theming.scss
+++ b/src/theming/theming.scss
@@ -4,7 +4,7 @@
 
 @import "./nf-theme.scss";
 
-@import "../app/shared/header/header.component.scss-theeme.scss";
+@import "/src/app/shared/header/header.component.scss-theme.scss";
 
 @mixin custom-components-theme($theme) {
   @include header-component-theme($theme);
