--- a/src/app/tonality/tonality-page/tonality-page.component.html
+++ b/src/app/tonality/tonality-page/tonality-page.component.html
@@ -1,1 +1,4 @@
-<p>tonality-page works!</p>
+<h1>Определние нот в тональности</h1>
+<div class="h-centered-block">
+    <app-tonality-note-finder></app-tonality-note-finder>
+</div>
