--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,7 @@
 @import 'theming/theming.scss';
+@import 'helpers.scss';
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
