part of tonality renderes

--- a/src/app/pages/tonality/tonality-page/tonality-page.component.html
+++ b/src/app/pages/tonality/tonality-page/tonality-page.component.html
@@ -1,4 +1,4 @@
 <h1>Определние нот в тональности</h1>
 <div class="h-centered-block">
-    <app-tonality-note-finder></app-tonality-note-finder>
+    <app-tonality></app-tonality>
 </div>
