--- a/src/app/shared/note-picker/note-picker.component.html
+++ b/src/app/shared/note-picker/note-picker.component.html
@@ -6,6 +6,6 @@
         *ngFor="let note of notes"
         [value]="note"
     >
-        {{note}}
+        {{ noteNames[note] }}
     </mat-button-toggle>
 </mat-button-toggle-group>
