--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,6 +1,8 @@
 <div class="header">
-    <h1>Нотный поисковик</h1>
-    <div class="page-tabs">
-        <app-page-tabs></app-page-tabs>
+    <div class="container">
+        <h1>Нотный поисковик</h1>
+        <div class="page-tabs">
+            <app-page-tabs></app-page-tabs>
+        </div>
     </div>
 </div>
