--- a/src/app/pages/tonality/note-finder/note-finder.component.html
+++ b/src/app/pages/tonality/note-finder/note-finder.component.html
@@ -1,1 +1,1 @@
-<app-piano [noteNames]="noteNames"></app-piano>
+<app-piano [noteNames]="noteNames" [highlitedNotes]="[noteNamesMap[tonic]]"></app-piano>
