new modes added

--- a/src/app/pages/tonality/tonality/tonality.component.html
+++ b/src/app/pages/tonality/tonality/tonality.component.html
@@ -1,9 +1,11 @@
 <h2>Выберете тональность</h2>
 <div class="line">
+    <h3>Выберите тонику</h3>
     <app-note-picker [(note)]="tonic"></app-note-picker>
 </div>
 
 <div class="line">
+    <h3>Выберите лад</h3>
     <app-mode-picker [(mode)]="mode"></app-mode-picker>
 </div>
 
