--- a/src/app/pages/tonality/mode-picker/mode-picker.component.html
+++ b/src/app/pages/tonality/mode-picker/mode-picker.component.html
@@ -1,11 +1,10 @@
-<mat-button-toggle-group
-    (change)="handleModeChange($event)"
-    [value]="modeValue"
+<button
+    *ngFor="let modeItem of modes | keyvalue"
+    (click)="handleModeChange($event)"
+    [attr.data-mode]="modeItem.key"
+    [color]="getButtonColor(modeItem)"
+
+    mat-button
 >
-    <mat-button-toggle
-        *ngFor="let mode of modes | keyvalue"
-        [value]="mode.key"
-    >
-        {{mode.value.name}}
-    </mat-button-toggle>
-</mat-button-toggle-group>
+    {{modeItem.value.name}}
+</button>
